refactor: code refactor

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="tools.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>CodeJam-dom Palette</title>
+    <title>Palette</title>
 </head>
 <body>
     <header>
-        <div><span>≡</span><h1>CodeJam-Palette</h1></div>
+        <div><span>≡</span><h1>Palette</h1></div>
     </header>
     <main>
         <section class="toolbar">
